Fixing the world's ugliest scrollbar (chromium)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,10 @@
         overflow: hidden;
     }
 
+    :root {
+        @apply scrollbar scrollbar-track-transparent scrollbar-thumb-neutral-700;
+    }
+
     iframe:focus-visible {
         outline: none;
         border: none;
